objects/tractionguest__Location_Visitors__c.object
<CustomObject>
    <fields>
        <fullName>tractionguest__Checkin_DateTime__c</fullName>
        <label>Checkin Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tractionguest__Checkout_DateTime__c</fullName>
        <label>Checkout Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tractionguest__Currently_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Onsite?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tractionguest__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tractionguest__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee</referenceTo>
        <relationshipLabel>Location Visitors</relationshipLabel>
        <relationshipName>Location_Visitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tractionguest__Location_Visitor__c</fullName>
        <label>Location Visitor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractionguest__Location__c</fullName>
        <description>Location where employee is visiting</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Location Visitors</relationshipLabel>
        <relationshipName>Location_Visitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Location Visitor</label>
    <listViews>
        <fullName>tractionguest__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Visitor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Visitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>